 * Added export/import support for Roles/Columns and Relations.
 * Fixed bugs when changing class hierarchy (move rename VirtualClass).
 * Fixed many small bugs and issues (indexing, link date, missed errors, etc).
 * Fixed block edit with ajax ([edit] method).
 * Removed fulltext search (no more MyISAM tables).
 * Fixed SQLiss scoping in queries like "Job:project" (added kpath filter).

== 1.0.0.rc2 2011-02-14

* major changes
 * Fixed Template bug with special '+' modes.
 * Fixed migration bug (should use NULL as brick name for app).
 * Fixed custom query loading bug (when brick is not activated).
 * Fixed Mongrel bug (incompatibility with Rails 2.3.8).

== 1.0.0.rc1 2011-02-11

* major changes
 * Changed 'date' for 'main_date'
 * Added 'redir' option on node update/create (also added 'mode')

== 1.0.0.beta5

* major changes
 * Using VirtualClass as proxy for type compilation (RubyLess, Zafu).
 * Caching Roles and VirtualClass.
 * Added 'integer' property with index.
 * Added query_parse (parse form content such as '>34' or '10..34').
 * Enable setting relations with SQLiss.
 * Changed class filter from '<r:Contact>' to '<r:Contact?>'.
 * Added VirtualClass introspection from zafu with [grid] and Node [send] methods.
 * Added relation groups.
 * Added 'map' and 'join' support to Array in RubyLess.
 * Added dynamic values support for [toggle].

== 1.0.0.beta4

* major changes
 * Removed BaseContact and Reference classes.
 * Removed super user (not needed anymore).
 * Upgraded to Property 2.0 (should resolve memory leak)
 * Added support for Scoped indices.
 * Added support for field indices.

== 1.0.0.beta3 2010-09-17

* major changes
 * created Zena::Remote API
 * fixed Ajax operations and tests
 * fixed forms to create/update new objects
 * added dynamic translations
 * better querybuilder integration relative to SELECT clauses
 * fixed date parsing
 * added safe 'send' method
 * added support to create and update Roles

== 1.0.0.beta2 2010-07-24
