@@ -33,7 +33,7 @@ start_node: "start"
 v_title: "title"
 "<r:if kind_of='Section'": "<r:Section?>"
 "<r:text/>": "mat"
-"on_if_node='ancestor'": "on_if='ancestor?(main)'"
+"on_if_node='ancestor'": "on_if='is_ancestor?(main)'"
 "<div do='admin_links'/>": "<ol class='admin_links' do='admin_links'>
     <li do='each' do='show'><a href='#'>do this</a></li>
   </ol>"
