@@ -9,13 +9,13 @@ calendar:
   context:
     date: "2006-03-18"
   src: "<div do='calendar' attr='date' select='posts where #{cal_start} <= date and date < #{cal_end} in project'/>"
-  res: "/<td><span>15</span><ol><li><a href='/oo/projects-list/Clean-Water-project/post27.html'>parc openi…</a></li></ol><\/td>.*<td class='sat ref'>18</td>/"
+  res: "/<td><p>15</p><ol><li><a href='/oo/projects-list/Clean-Water-project/post27.html'>parc openi…</a></li></ol><\/td>.*<td class='sat ref'>18</td>/"
 
 calendar_tz:
   context:
     date: "2006-03-18"
   src: "<div do='calendar' attr='date' tz='America/New_York' select='posts where #{cal_start} <= date and date < #{cal_end} in project'/>"
-  res: "/<td><span>14</span><ol><li><a href='/oo/projects-list/Clean-Water-project/post27.html'>parc openi…</a></li></ol><\/td>.*<td class='sat ref'>18</td>/"
+  res: "/<td><p>14</p><ol><li><a href='/oo/projects-list/Clean-Water-project/post27.html'>parc openi…</a></li></ol><\/td>.*<td class='sat ref'>18</td>/"
 
 calendar_with_blocks:
   context:
@@ -25,14 +25,14 @@ calendar_with_blocks:
       <r:link date='#{date.advance(:months =&gt; -1).strftime(\"%Y-%m-%d\", tz)}' text='PREV'/>
       <r:date format='%B'/>
       <r:link date='#{date.advance(:months =&gt; 1).strftime(\"%Y-%m-%d\", tz)}' text='NEXT'/>
-    </h3></div>"
-  res: "/date=2006-02-18'>PREV.*date=2006-04-18'>NEXT/"
+    </h3><r:cell><b do='date' format='%e.%m'/></r:cell></div>"
+  res: "/date=2006-02-18'>PREV.*date=2006-04-18'>NEXT.*<b>15.03</b>/"
 
 calendar_node_attr:
   context:
     date: '2006-03-10'
   src: "<div do='calendar' attr='created_at' select='nodes where #{cal_start} <= created_at and created_at < #{cal_end} in project'/>"
-  res: "/<span>10</span>.*Keeping th…/"
+  res: "/p>10</p>.*Keeping th…/"
 
 calendar_bad_query:
   src: "<div do='calendar' attr='date' select='posts where #{cal_start} <= starsky and hutch < #{cal_end} in project'/>"
