@@ -133,7 +133,7 @@ on_if_on_each:
   res: "<p class=''>crocodiles</p><p class=''>Keeping things clean !</p><p class=' on'>status title</p>"
 
 on_if_ancestor:
-  src: "<r:root><r:pages><li do='each' on_if='ancestor?(main)' class='hello' join=', ' do='title'/></r:pages></r:root>"
+  src: "<r:root><r:pages><li do='each' on_if='is_ancestor?(main)' class='hello' join=', ' do='title'/></r:pages></r:root>"
   res: "<li class='hello'>Collections</li>, <li class='hello'>Nature</li>, <li class='hello'>people</li>, <li class='hello on'>projects list</li>, <li class='hello'>Skins (layout themes)</li>"
 
 on_if_empty:
