@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new("> 1.3.1") if s.respond_to? :required_rubygems_version=
   s.authors = ["Gaspard Bucher"]
-  s.date = %q{2011-04-20}
+  s.date = %q{2011-05-08}
   s.default_executable = %q{zena}
   s.description = %q{zena is a Ruby on Rails  CMS (content managment system) with a focus on usability, ease of customization and web 2.0 goodness (application like behaviour).}
   s.email = %q{gaspard@teti.ch}
@@ -164,7 +164,6 @@ Gem::Specification.new do |s|
     "app/views/links/destroy.rjs",
     "app/views/links/show.rjs",
     "app/views/nodes/500.html",
-    "app/views/nodes/_dates.rhtml",
     "app/views/nodes/_edit_attribute.rhtml",
     "app/views/nodes/_gallery.rhtml",
     "app/views/nodes/_groups.rhtml",
@@ -501,6 +500,7 @@ Gem::Specification.new do |s|
     "lib/zena/app.rb",
     "lib/zena/base_additions.rb",
     "lib/zena/code_syntax.rb",
+    "lib/zena/console.rb",
     "lib/zena/controller/test_case.rb",
     "lib/zena/core_ext/date_time.rb",
     "lib/zena/core_ext/dir.rb",
@@ -2229,6 +2229,7 @@ Gem::Specification.new do |s|
       s.add_runtime_dependency(%q<property>, ["= 2.1.2"])
       s.add_runtime_dependency(%q<uuidtools>, ["= 2.0.0"])
       s.add_runtime_dependency(%q<authlogic>, ["= 2.1.3"])
+      s.add_runtime_dependency(%q<zafu>, ["= 0.7.7"])
       s.add_runtime_dependency(%q<shoulda>, ["= 2.10.3"])
       s.add_runtime_dependency(%q<fast_gettext>, ["~> 0.4.16"])
       s.add_runtime_dependency(%q<syntax>, ["= 1.0.0"])
@@ -2251,6 +2252,7 @@ Gem::Specification.new do |s|
       s.add_dependency(%q<property>, ["= 2.1.2"])
       s.add_dependency(%q<uuidtools>, ["= 2.0.0"])
       s.add_dependency(%q<authlogic>, ["= 2.1.3"])
+      s.add_dependency(%q<zafu>, ["= 0.7.7"])
       s.add_dependency(%q<shoulda>, ["= 2.10.3"])
       s.add_dependency(%q<fast_gettext>, ["~> 0.4.16"])
       s.add_dependency(%q<syntax>, ["= 1.0.0"])
@@ -2274,6 +2276,7 @@ Gem::Specification.new do |s|
     s.add_dependency(%q<property>, ["= 2.1.2"])
     s.add_dependency(%q<uuidtools>, ["= 2.0.0"])
     s.add_dependency(%q<authlogic>, ["= 2.1.3"])
+    s.add_dependency(%q<zafu>, ["= 0.7.7"])
     s.add_dependency(%q<shoulda>, ["= 2.10.3"])
     s.add_dependency(%q<fast_gettext>, ["~> 0.4.16"])
     s.add_dependency(%q<syntax>, ["= 1.0.0"])
